@@ -1,0 +1,9 @@
+KNOWNBUG
+checker3.sv
+--bound 20
+^\[main\.c\.assert\.1\] always myChecker\.data != 10: REFUTED$
+^EXIT=10$
+^SIGNAL=0$
+--
+--
+Support for property parameters for checkers is missing.
