@@ -61,7 +61,7 @@ void verilog_parse_treet::modules_provided(
 {
   for(auto &item : items)
   {
-    if(item.id() == ID_verilog_module)
+    if(item.id() == ID_verilog_module || item.id() == ID_verilog_checker)
     {
       module_set.insert(id2string(
         verilog_module_symbol(to_verilog_module_source(item).base_name())));
@@ -92,7 +92,7 @@ void verilog_parse_treet::build_item_map()
 
   for(const auto &item : items)
   {
-    if(item.id() == ID_verilog_module)
+    if(item.id() == ID_verilog_module || item.id() == ID_verilog_checker)
     {
       auto &verilog_module = to_verilog_module_source(item);
       item_map[verilog_module.base_name()] = &verilog_module;
